Fixing up the styling on the beacon details page when an offer has been accepted. There's nice spacing now!

--- a/client/resources/sass/app.scss
+++ b/client/resources/sass/app.scss
@@ -232,7 +232,7 @@ centered-image {
 /* Beacon Summary Directive */
 $review-btn-width: 30px;
 
-.bg-beacon-list-group {
+.bg-list-group {
   @extend .list-group;
   margin-bottom: 0px;
 }
